# Blaze2Cap_AI_Motioner

./: .gitignore  README.md  S1_acting1_cam1_converted_zup.npy  analyze_frame0.py  analyze_output.txt  check_mapping_output.txt  inspect_npy.py  plot_offset_coord.py  pyproject.toml  run_inference_v2.py  test_bone_lengths_plot.py  test_inference_and_plot.py  test_inference_interactive.py  verify_output_v2.txt  visualize_inference_v2.py
analyze/: check_empty_files.py  check_mapping_v2.py  inspect_val_sizes.py  plot_gt_raw_off.py  plot_offset.py  reproduce_issue.py  result.txt  test_inference_new.py  test_vector_logic.py  verify_fixes.py  verify_output.txt
blaze2cap/: __init__.py  inference.py  plot_inference.py
blaze2cap/data/: __init__.py  data_loader.py  dataset_structure.md  generate_json.py  pre_processed_19channels.md
blaze2cap/modeling/: __init__.py  eval_motion.py  eval_motion_posonly.py  eval_motion_posonly_angle.py  loss copy.py  loss.py  loss_posonly.py  loss_posonly_angle.py  optimization.py  summary.md  test_fk_plot.py  test_fk_plot_deor.py  test_fk_plot_withrm.py  test_fk_plot_withrm_1.py  test_inference_plot copy.py  test_inference_plot.py  transformation_tobedone.md
blaze2cap/modules/: __init__.py  data_loader copy 2.py  data_loader copy.py  data_loader.py  data_loader_posonly.py  data_loader_posonly_angle.py  dataset.py  models.py  models_posonly.py  models_posonly_angle.py  pose_processing copy.py  pose_processing.py  pose_processing_posonly.py  pose_processing_posonly_angle.py  summaryofthismodule.md
blaze2cap/plots/: test_fk_gt_6d.py
blaze2cap/utils/: __init__.py  checkpoint.py  gen_offsets.py  logging_.py  profile.py  skeleton_config.py  train_utils.py  visualization.py
learn/every/: debug_train_step.py
test/: __init__.py  evaluate.py  run_all.py  test_dataloader.py  test_loss.py  test_model.py
test/inference_test/: inference copy 3.py  inference copy 4.py  inference.py  inference_posonly.py  (+4 more)
tools/: 22_infos.md  __init__.py  actualheirarchy.bvh  pos_dummy.txt  skeleton_config.py  train copy.py  train.py  train_posonly.py  train_posonly_angle.py
(+27 files in other folders)
